# kita

./: .eslintrc.json  .gitignore  .pnp.cjs  README.md  buf.gen.yaml  buf.work.yaml  components.json  forge.config.ts  index.html  makefile  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.main.config.ts
.github/workflows/: todo-finder.yml
assets/: kita_logo.icns
components/: FolderSettings.tsx  Titlebar.tsx  WindowActions.tsx
components/ChatInterface/: ChatInput.tsx  ChatTitle.tsx  ModelSelect.tsx
components/ConversationTree/: ConversationTree.tsx  ConversationTreeItem.tsx
components/Tables/: ModelTable.tsx  ServerTable.tsx
components/Titlebar/: Titlebar.tsx
components/ui/: Spinner.tsx  accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  (+3 more)
embedding_service/: .gitignore  main.py
embedding_service/pb/v1/: embedding_service_pb2.py  embedding_service_pb2_grpc.py
go-orchestrator/: .gitignore  file-processor.go  go.mod  main.go  utils.go
go-orchestrator/file-processor/: file-processor.go
orchestrator/: db.go  embedding_service.go  embeddings.go  file-processor.go  go.mod  go.sum  main.go  text-extractor.go
orchestrator/protos/: embedding_service.proto
orchestrator/protos/pb/v1/: embedding_service.proto
orchestrator/service/: embedding.go
src/: App.tsx  AppHandler.ts  AppTable.tsx  EmptyState.tsx  FileProcessor.ts  FileTable.tsx  FilesTable.tsx  FolderSettings.tsx  Footer.tsx  Header.tsx  ModelSelect.tsx  NoModelSelected.tsx  RagMode.tsx  RecentsTable.tsx  SectionNav.tsx  Settings.tsx  ThemeProvider.tsx  Titlebar.tsx  app.tsx  embeddingPipeline.ts  globalShortcut.ts  globals.css  layout.tsx  main.ts  main.tsx  preload.ts  renderer.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: kita_icon_margin.icns
src-tauri/src/: app_handler.rs  app_handler2.rs  app_handler3.rs  contacts.rs  database_handler.rs  embedder.rs  file_processor.rs  file_watcher.rs  lib.rs  main.rs  model.rs  model_registry.rs  qdrant_manager.rs  resource_monitor.rs  serve.rs  server.rs  settings.rs  tokenizer.rs  utils.rs  vectordb_manager.rs  window.rs
src-tauri/src/chunker/: docx.rs  json.rs  markdown.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/parser/: code.rs  docx.rs  main.rs  mod.rs  pdf.rs  runner.rs  txt.rs  xls.rs
src-tauri/src/swift/: apps.swift  contacts.swift  entitlements.plist
src/components/ui/: toast.tsx
src/lib/: ButtonText.tsx  Spinner.tsx  utils.ts
src/lib/hooks/: useGetContacts.ts  useResourceMonitoring.ts
src/pages/: Home.tsx
src/settings/: Models.tsx  Settings.ts  Settings.tsx
src/styles/: index.css
src/types/: index.ts  types.ts
