[workspace]
members = ["."]

[package]
name = "kita"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kita_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
libproc = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.22.3"
core-foundation = "0.9.3"
sysinfo = "0.29"
objc = "0.2.7"
objc-foundation = "0.1.1"
cocoa = "0.24.1"
base64 = "0.21.0"
lazy_static = "1.4.0"
rayon = "1.5"
base64-simd = "0.8"
objc2-app-kit = "0.3"
libc = "0.2"
tokio = { version = "1.x", features = ["rt", "macros", "time"] }
rusqlite = { version = "0.29.0", features = ["bundled", "vtab"] }
futures = "0.3"
walkdir = "2.3"
thiserror = "1.0"
tauri-plugin-dialog = "2"
tracing = "0.1.41"
infer = "0.19.0"
async-trait = "0.1.87"
tokio-stream = "0.1.17"
clap = "4.5.32"
fastembed = "4.6.0"
tauri-plugin-shell = "2"
lancedb = "0.18.1"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
lopdf = "0.36.0"
pdf-extract = "0.8.2"
docx-rs = "0.4.17"
dirs = "6.0.0"
reqwest = "0.12.15"
futures-util = "0.3.31"
window-vibrancy = "0.6.0"
regex = "1.11.1"
notify = "8.0.0"
downcast-rs = "2.0.1"
objc2-contacts = "0.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
